add sensitivity to table

--- a/example/test.html
+++ b/example/test.html
@@ -23,9 +23,9 @@
 
 
 
-<script src="seisplotjs_traveltime_01s_standalone.js"></script>
-<script src="seisplotjs_waveformplot_12s_standalone.js"></script>
-<script src="seisplotjs_fdsnstation_01s_standalone.js"></script>
+<script src="seisplotjs_fdsnstation_1.0.1-SNAPSHOT_standalone.js"></script>
+<script src="seisplotjs_traveltime_1.0.1-SNAPSHOT_standalone.js"></script>
+<script src="seisplotjs_waveformplot_1.2.1_standalone.js"></script>
 <script src="test.js"></script>
 </body>
 </html>
