output overall sensitivity on click on channel

--- a/example/test.html
+++ b/example/test.html
@@ -20,6 +20,13 @@
 <div class="channels">
 </div> 
 
+   <h3>Response</h3>
+<div class="responseurl">
+</div> 
+
+<div class="response">
+</div> 
+
 
 
 
