--- a/example/test.html
+++ b/example/test.html
@@ -30,6 +30,7 @@
 
 
 
+<script src="polyfill.min.js"></script>
 <script src="seisplotjs_fdsnstation_1.0.1-SNAPSHOT_standalone.js"></script>
 <script src="seisplotjs_traveltime_1.0.1-SNAPSHOT_standalone.js"></script>
 <script src="seisplotjs_waveformplot_1.2.1_standalone.js"></script>
