--- a/example/test.html
+++ b/example/test.html
@@ -8,33 +8,31 @@
 
    <h3>Stations</h3>
 <div class="url">
-</div> 
+</div>
 
 <div class="stations">
-</div> 
+</div>
 
    <h3>Channels</h3>
 <div class="chanurl">
-</div> 
+</div>
 
 <div class="channels">
-</div> 
+</div>
 
    <h3>Response</h3>
 <div class="responseurl">
-</div> 
+</div>
 
 <div class="response">
-</div> 
+</div>
 
 
 
 
 <script src="polyfill.min.js"></script>
-<script src="seisplotjs_fdsnstation_1.0.1-alpha.1_standalone.js"></script>
-<script src="seisplotjs_traveltime_1.0.1-alpha.1_standalone.js"></script>
-<script src="seisplotjs_waveformplot_1.2.2-alpha.1_standalone.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="seisplotjs_fdsnstation_1.0.1-alpha.2_standalone.js"></script>
 <script src="test.js"></script>
 </body>
 </html>
-
