--- a/example/test.html
+++ b/example/test.html
@@ -32,7 +32,7 @@
 
 <script src="polyfill.min.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="seisplotjs_fdsnstation_1.0.1-alpha.2_standalone.js"></script>
+<script src="seisplotjs_fdsnstation_1.1.0_standalone.js"></script>
 <script src="test.js"></script>
 </body>
 </html>
