--- a/example/test.html
+++ b/example/test.html
@@ -30,7 +30,7 @@
 
 
 
-<script src="polyfill.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="seisplotjs_fdsnstation_1.1.1_standalone.js"></script>
 <script src="test.js"></script>
